fix(note): Java 版本特性 Batch 1-5 修复 — 模板残留/重复回链/JEP 补全/版本互链/格式统一
Batch 1: Java 13/19 模板残留修复 + Java 11 重复回链 + Java 19 frontmatter
Batch 2: Java 8 补充 19 个缺失 JEP 详情章节（36→55）
Batch 3: Java 9 验证完成（91 JEP 全部有详情，无需补充）
Batch 4: 18 个版本全部添加前后版本导航互链
Batch 5: 统一移除 6 个文件的'定位'块格式

Co-Authored-By: Claude <noreply@anthropic.com>